# resultsza-sdk

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-node.yml  publish-python.yml
node/: README.md  package-lock.json  package.json  tsconfig.json
node/examples/: checkPlayedNumbers.ts  getLatestLotto.ts  webhookReceiverExpress.ts
node/src/: client.ts  errors.ts  index.ts  webhook.ts
node/tests/: client.test.ts  endpoints.test.ts  helpers.ts  webhook.test.ts
python/: README.md  pyproject.toml
python/examples/: check_played_numbers.py  get_latest_lotto.py  horse_racing_racecard.py  verify_webhook.py  webhook_receiver_flask.py
python/resultsza/: __init__.py  client.py  exceptions.py  webhook.py
python/tests/: conftest.py  test_account.py  test_checkers.py  test_client.py  test_errors.py  test_horse_racing.py  test_number_tools.py  test_result_endpoints.py  test_webhook.py
