[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resultsza-sdk"
version = "0.1.2"
description = "Official Python client for the ResultsZA lottery API: Lotto, Powerball, EuroMillions, UK49s and horse racing results, plus lottery webhook verification."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Stefan" }]
keywords = [
  "resultsza", "lottery-api", "lotto-api", "lottery-results", "lottery-webhook",
  "lotto-webhook", "lottery", "lotto", "powerball", "euromillions", "uk49s",
  "mega-millions", "irish-lotto", "daily-lotto", "national-lottery", "horse-racing",
  "south-africa", "results-api", "api", "sdk", "webhook", "webhook-verification",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "respx>=0.20",
]

[project.urls]
Homepage = "https://resultsza.co.za"
Documentation = "https://resultsza.co.za/api_docs"
"API Keys" = "https://resultsza.co.za/generate_api_key"
"Webhook Docs" = "https://resultsza.co.za/webhook-docs"

[tool.hatch.build.targets.wheel]
packages = ["resultsza"]

[tool.pytest.ini_options]
testpaths = ["tests"]
